@@ -355,16 +355,4 @@
 #define M_PI  3.14159265358979323846
 #endif
 
-#if defined(__MINGW32__)
-#define PATH_SEPARATER_CHAR '\\'
-#define PATH_SEPARATER_STRING "\\"
-#define OTHER_PATH_SEPARATER_CHAR '/'
-#define OTHER_PATH_SEPARATER_STRING "/"
-#else
-#define PATH_SEPARATER_CHAR '/'
-#define PATH_SEPARATER_STRING "/"
-#define OTHER_PATH_SEPARATER_CHAR '\\'
-#define OTHER_PATH_SEPARATER_STRING "\\"
-#endif
-
 #endif
