@@ -113,7 +113,7 @@ s_log_init(char *cwd, const char *filename)
     return;
   }
 
-  path = u_basic_strdup_multiple(cwd, PATH_SEPARATER_STRING, filename, NULL);
+  path = u_basic_strdup_multiple(cwd, G_DIR_SEPARATOR_S, filename, NULL);
 
   /* create log file */
   logfile_fd = open(path, O_RDWR|O_CREAT|O_TRUNC, 0600);	
